Fixed the margin around the tags, should be perfectly aligned now.

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -2333,7 +2333,7 @@ tr.disabled th {
   border: 1px solid #999999;
   color: #999999;
   text-shadow: none;
-  margin-left: 3px;
+  margin: -1px 0 -1px 5px;
 }
 .label-info {
   background-color: #3a87ad;
